fix chat fix overflow move captcha div into body

--- a/src/styles/default.css
+++ b/src/styles/default.css
@@ -4,7 +4,7 @@ body {
   font-size: 16px;
   border: none;
   user-select: none;
-  background: white;
+  background: #c4c4c4;
 }
 
 html, body {
